--- a/accesso-temporaneo/index.html
+++ b/accesso-temporaneo/index.html
@@ -71,8 +71,11 @@
   <div class="form-container">
     <h1>Accesso Temporaneo</h1>
     <form id="access-form">
-      <label for="name">Inserisci il tuo nome:</label>
+      <label for="name">Inserisci il tuo nome*:</label>
       <input type="text" id="name" name="name" placeholder="Il tuo nome" required>
+      
+      <label for="name">Codice utente (facoltativo):</label>
+        <input type="text" id="usercode" name="usercode" placeholder="A1B2C3D4-55>
 
       <label for="photo">URL della tua foto:</label>
       <input type="url" id="photo" name="photo" placeholder="https://example.com/tuafoto.jpg" required>
