--- a/it/documenti.html
+++ b/it/documenti.html
@@ -14,9 +14,127 @@ link_text: "Vai alla home"# Aggiungi qui il testo del link
 {% include hero.html %}
 
 <main class="container my-4" markdown="1">
-| #   | Nome Documento       | Area di Servizio      | Link                  |
-|-----|----------------------|-----------------------|-----------------------|
-| 1   | Competenze GJD       | 18f - Gabriel Jones   | [Scarica](#)          |
-| 2   | Proposte in comune   | Dip. per la comunità - Arena giovani          | [Scarica](#)          |
-| 3   | Obiettivi trasparenza 2025          | RS - Reparto Stampa   | [Scarica](#)          |
-</main>
+  <h3>Documenti in evidenza</h3>
+  <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Nome</th>
+      <th scope="col">Cognome</th>
+      <th scope="col">Username</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mario</td>
+      <td>Verdi</td>
+      <td>mario.verdi</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Francesco</td>
+      <td>Bianchi</td>
+      <td>francesco.bianchi</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Alessandro</td>
+      <td>Rossi</td>
+      <td>alessandro.rossi</td>
+    </tr>
+  </tbody>
+</table>
+<h3>Documenti comune</h3>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Nome</th>
+      <th scope="col">Cognome</th>
+      <th scope="col">Username</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mario</td>
+      <td>Verdi</td>
+      <td>mario.verdi</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Francesco</td>
+      <td>Bianchi</td>
+      <td>francesco.bianchi</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Alessandro</td>
+      <td>Rossi</td>
+      <td>alessandro.rossi</td>
+    </tr>
+  </tbody>
+</table>
+<h3>Trasparenza</h3>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Nome</th>
+      <th scope="col">Cognome</th>
+      <th scope="col">Username</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mario</td>
+      <td>Verdi</td>
+      <td>mario.verdi</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Francesco</td>
+      <td>Bianchi</td>
+      <td>francesco.bianchi</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Alessandro</td>
+      <td>Rossi</td>
+      <td>alessandro.rossi</td>
+    </tr>
+  </tbody>
+</table>
+<h3>Documenti stampa</h3>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Nome</th>
+      <th scope="col">Cognome</th>
+      <th scope="col">Username</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mario</td>
+      <td>Verdi</td>
+      <td>mario.verdi</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Francesco</td>
+      <td>Bianchi</td>
+      <td>francesco.bianchi</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Alessandro</td>
+      <td>Rossi</td>
+      <td>alessandro.rossi</td>
+    </tr>
+  </tbody>
+</table></main>
