--- a/accesso-temporaneo/index.html
+++ b/accesso-temporaneo/index.html
@@ -110,7 +110,7 @@
       // Messaggio di conferma
       setTimeout(() => {
         alert('Accesso completato! Ora verrai reindirizzato alla homepage.');
-        window.location.href = '/UPID/?login-gj-kpis'; // Reindirizza alla homepage
+        window.location.href = '/?login-gj-kpis'; // Reindirizza alla homepage
       }, 0);
     });
   </script>
